plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "6.3.1.5724"
}


version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

sonarqube {
	properties {
		property "sonar.projectKey", "PatrickLaubscher_elecmove-api"
		property "sonar.organization", "patricklaubscher"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.login", System.getenv("SONAR_TOKEN")
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// MapStruct
	implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.security:spring-security-oauth2-jose'
	implementation 'com.auth0:java-jwt:4.5.0'

	implementation 'mysql:mysql-connector-java:8.0.33'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	implementation 'com.h2database:h2'
	testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
	testImplementation 'org.testcontainers:mysql:1.20.3'
	testImplementation 'com.h2database:h2:2.2.220'


}

springBoot {
    mainClass = 'fr.elecmove.api.ApiElecMove'
}

bootJar {
    mainClass = 'fr.elecmove.api.ApiElecMove'
}



test {

	useJUnitPlatform()

	def byteBuddyAgent = configurations.testRuntimeClasspath.find { it.name.contains("byte-buddy-agent") }
	if (byteBuddyAgent != null) {
		jvmArgs += "-javaagent:${byteBuddyAgent.absolutePath}"
	}

}